<resources>
    <string name="app_name">BikeMap 2.0</string>
    <string name="valuesHeadline">Number of values: 0</string>
    <string name="startButton">Start</string>
    <string name="standCount">Standing: 0</string>
    <string name="smoothCount">Smooth: 0</string>
    <string name="nastyCount">Nasty: 0</string>
    <string name="roughCount">Rough: 0</string>
    <string name="startSpeed">0</string>
    <string name="headlineSpeed">Speed (km/h):</string>
    <string name="speedUnit">km/h</string>
    <string name="buttonShowLog">Show log</string>
    <string name="buttonHideLog">Hide log</string>
    <string name="sendData">Send to database</string>
    <string name="stopButton">Stop</string>
    <string name="sending">Sending…</string>
    <string name="error">Error, try again</string>
    <string name="finished">Transfer finished</string>
</resources>