<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <TextView
                android:id="@+id/currentSpeed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/startSpeed"
                android:textColor="@color/colorAccent"
                android:textSize="60sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/speedUnit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/speedUnit"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/headlineStand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/standCount"
                android:textColor="#FFFFFF" />

            <ProgressBar
                android:id="@+id/progressStand"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0" />

            <TextView
                android:id="@+id/headlineSmooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smoothCount"
                android:textColor="#FFFFFF" />

            <ProgressBar
                android:id="@+id/progressSmooth"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100" />

            <TextView
                android:id="@+id/headlineRough"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/roughCount"
                android:textColor="#FFFFFF" />

            <ProgressBar
                android:id="@+id/progressRough"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100" />

            <TextView
                android:id="@+id/headlineNasty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nastyCount"
                android:textColor="#FFFFFF" />

            <ProgressBar
                android:id="@+id/progressNasty"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100" />

            <Button
                android:id="@+id/buttonRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#646464"
                android:onClick="buttonRecordClick"
                android:text="@string/startButton"
                android:textColor="#FFFFFF" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/buttonLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#646464"
                android:onClick="buttonToggleLogClick"
                android:text="@string/buttonShowLog"
                android:textColor="#FFFFFF" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/buttonSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#646464"
                android:enabled="true"
                android:onClick="buttonSendDataClick"
                android:text="@string/sendData"
                android:textColor="#FFFFFF"
                android:visibility="invisible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/headlineVibration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valuesHeadline"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textVibration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:text=""
                android:textColor="#AAAAAA"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>